sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:5: error: not found: value pluspetit
  if(!pluspetit(0,1)){
      ^AlgInsertionSort:11: error: not found: value pluspetitQue
    while(!pluspetitQue(j,v)||j!=0){
           ^